Deeper analysis for missing trigger information.